# StockMovingAvergae

./: CMakeLists.txt  Documentation.txt  README.txt  debug.sh  main.cpp  release.sh  simConfig.csv  start.sh
include/FM/: Algo.h  AlgoConfig.h  CsvRow.h  InputReader.h  Simulator.h  utils.h
src/: Algo.cpp  AlgoConfig.cpp  CsvRow.cpp  InputReader.cpp  Simulator.cpp
