cmake_minimum_required(VERSION 3.16.2)
set(project_name simulator)
project(${project_name})
include_directories(include/FM/)
include_directories(src/)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
# include_directories(./3rdParty/include/)
add_executable(${project_name} main.cpp)
target_link_libraries(${project_name} PRIVATE Threads::Threads)
# find_package(ZLIB)
# if(ZLIB_FOUND)
#     include_directories(${ZLIB_INCLUDE_DIRS})
#     target_link_libraries(${project_name} ${ZLIB_LIBRARIES})
# endif()